# FInd_Your_Job

./: .env.example  .gitignore  README.md  TECHNICAL.md  pyproject.toml
apps/api/: requirements.txt
apps/api/app/: __init__.py  config.py  db.py  main.py  schemas.py  security.py
apps/web/: package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/worker/: Dockerfile  config.py  main.py  requirements.txt  security.py
artifacts/screenshots/: job-001.txt  job-003.txt  job-004.txt
examples/: resume.txt
src/find_your_job/: __init__.py  browser_adapters.py  cli.py  models.py  orchestrator.py  sample_data.py  web.py  webapp.py
src/find_your_job.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/find_your_job/agents/: __init__.py  application_writer.py  base.py  browser_executor.py  fit_scoring.py  research.py  review_gate.py
supabase/migrations/: 001_init.sql  002_add_llm_api_key_to_workflow_runs.sql
