[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "find-your-job"
version = "0.1.0"
description = "A multi-agent system for researching jobs, scoring fit, drafting applications, and gating final submissions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.44.0"]

[project.scripts]
find-your-job = "find_your_job.cli:main"
find-your-job-web = "find_your_job.web:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
